tests/NormalTests/paczka2/big_fuzzy/67727061.err
Error in line 17: Ptj2L A767 24,2
Error in line 31: AgetcgOoI A138 75,9
Error in line 35: BUgU3as5 A138 4,9
Error in line 38: BUgU3as5 S309 58,8
Error in line 44: A138 S309 15,0
Error in line 48: A138 A767 79,7
Error in line 59: Ptj2L S309 39,5
Error in line 81: A138 A158 43,5
Error in line 84: BUgU3as5 A158 68,4
Error in line 106: Up0TGcu A158 21,5
Error in line 102: AgetcgOoI A138 20,0
Error in line 110: Up0TGcu S309 945
Error in line 113: Ptj2L A15s 52,3
Error in line 107: Up0TGcu A138 56,1
Error in line 121: Ptj2LA15899,8
Error in line 124: BUgU3as5 S309 58,2
Error in line 122: AgetcgOoI A767 179,7
Error in line 128: AgetcgOoI A158 92,1
Error in line 132: AgetcgOoI S309 95,4
Error in line 139: AgetcgOoI S309 24,9
Error in line 147: yUBHl A767 82,20
Error in line 134: Up0TGcu S309 139,5
Error in line 156: yUBHl S309 53,5
Error in line 160: yUBHl S309 58,0
Error in line 161: yUBHl A767 93,6
Error in line 169: AgetcgOoI A767 53,7
Error in line 170: AgetcgOoI S309 52,1
Error in line 165: yUBHl S309 41,2
Error in line 174: F7NvnHY A767 41,4
Error in line 181: F7NvnHY A138 22,3
Error in line 180: Ptj2L A767 20,9
Error in line 187: F7NvnHY A158 34,3
Error in line 188: Ptj2L A158 45,8
Error in line 185: Up0TGcu A138 1,6
Error in line 193: Ptj2L A767 28,9
Error in line 196: Up0TGcu A767 47,5
Error in line 200: A138 A138 24,7
Error in line 205: A138 A158 24,9
Error in line 204: Up0TGcu A158 95,9
Error in line 212: BUgU3as5 A158 87,9
Error in line 211: Up0TGcu S309 52,8
Error in line 219: F7NvnHY A767 66,9
Error in line 213: BUgU3as5 S309 22,6
Error in line 231: Up0TGcu S309 53,5
Error in line 245: BUgU3as5 A767 89,55
